src/snapshots/typed_script__ir__test__test_well_formed_control_flow_graph_test_borrow.ts_function_FunctionDeclarationID(8).snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_4
block_4 -> [block_5, ]
