src/snapshots/typed_script__ir__test__test_well_formed_control_flow_graph_test_borrow_after_loop.ts_function_main.snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_6
block_6 -> [block_7, ]
block_7 -> [block_8, ]
block_8 -> [block_9, block_12, ]
block_9 -> [block_10, ]
block_10 -> [block_8, ]
