src/snapshots/typed_script__ir__test__test_well_formed_control_flow_graph_test_borrow_existing_variable_after_loop.ts_function_borrow_vall.snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_22
block_22 -> [block_24, ]
