src/snapshots/typed_script__ir__test__test_well_formed_control_flow_graph_test_borrow_existing_variable_after_loop.ts_function_main.snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_6
block_6 -> [block_7, ]
block_7 -> [block_9, ]
block_9 -> [block_10, block_15, ]
block_10 -> [block_11, ]
block_11 -> [block_12, block_14, ]
block_12 -> [block_13, ]
block_13 -> [block_9, ]
block_14 -> [block_13, ]
