src/snapshots/typed_script__ir__test__test_well_formed_control_flow_graph_test_if.ts_function_main.snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_6
block_6 -> [block_7, ]
block_7 -> [block_9, ]
block_9 -> [block_10, ]
