src/snapshots/typed_script__ir__test__test_well_formed_control_flow_graph_test_if.ts_function_move_val.snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_11
block_11 -> [block_13, ]
