src/snapshots/typed_script__ir__test__test_well_formed_control_flow_graph_test_if_else_borrow_in_both_branches.ts_function_move_val.snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_12
block_12 -> [block_14, ]
