src/snapshots/typed_script__ir__test__test_well_formed_control_flow_graph_test_if_else_three.ts_function_borrow_val.snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_15
block_15 -> [block_17, ]
