src/snapshots/typed_script__ir__test__test_well_formed_control_flow_graph_test_loop_borrow_and_move.ts_function_borrow_and_move.snap
---
source: src/ir.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_16
block_16 -> [block_19, ]
